<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_chooseLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_level"
        android:textSize="28dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_TestLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_EasyLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_green_light"/>

    <Button
        android:id="@+id/btn_MidLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/middle"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_orange_light"/>

    <Button
        android:id="@+id/btn_HardLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_red_light"/>
</LinearLayout>